Fixed scrolling issues on mobile.

--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: black;
   color: #777;
+  overflow: hidden;
 }
 
 code {
